# NetworkCandy

./: .gitignore  CMakeLists.txt  README.md
nw-candy/: CMakeLists.txt
nw-candy/include/nw-candy/: ConnectivityManager.h  uPnPForwarder.h  uPnPHandler.h
nw-candy/src/: ConnectivityManager.cpp  IDGv1Forwarder.cpp  IDGv2Forwarder.cpp  IGDv1Forwarder.cpp  IGDv2Forwarder.cpp  uPnPForwarder.cpp  uPnPHandler.cpp
tests/: CMakeLists.txt  tests.cpp  uPnPTests.cpp
